# compras-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0cd640399c29_initial_schema.py  add_invoice_duplicate_constraint.py  add_is_active_server_default.py  c3d4e5f6a7b8_add_gastos_tables.py
backend/app/: config.py  main.py
backend/app/db/: engine.py  models.py  session.py
backend/app/models/: conversation.py  extraction.py
backend/app/providers/: base.py  meta.py  twilio.py
backend/app/routers/: admin.py  extraction.py  gastos.py  health.py  prompt.py  whatsapp.py
backend/app/schemas/: admin.py
backend/app/services/: amounts.py  cierre.py  conversation.py  extraction.py  gasto.py  invoice.py  slot_extraction.py  storage.py  ticket_vision.py
backend/scripts/: calibrate_prompt.py
backend/tests/: conftest.py  test_admin.py  test_amounts.py  test_config.py  test_conversation.py  test_conversation_cierre.py  test_conversation_lock_sql.py  test_db.py  test_extraction.py  test_extraction_models.py  test_gasto_service.py  test_gastos_models.py  test_gastos_webhook.py  test_health.py  test_invoice_service.py  test_prompt_trigger.py  test_providers.py  test_slot_extraction.py  test_storage.py  test_ticket_vision.py  test_whatsapp.py
backend/tests/fixtures/: README.md  calibration_report.json  factura_a_catena-zapata_ground_truth.json  factura_a_ensincro-07ene26_ground_truth.json  (+9 more)
(+174 files in other folders)
