[project]
name = "compras-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn==0.38.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "sqlalchemy==2.0.49",
    "asyncpg==0.31.0",
    "alembic==1.18.4",
    "structlog==25.5.0",
    "python-dotenv==1.2.2",
    "openai==2.36.0",
    "twilio==9.10.9",
    "python-multipart==0.0.20",
    "pymupdf==1.25.5",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "aiosqlite",
    "httpx",
    "anthropic",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: marks tests as live API integration tests (deselect with '-m not integration')"]
